* What is new in gsl-2.4:

** changed COD expression to Q R Z^T instead of Q R Z to
   be consistent with standard texts

** added check for nz == 0 in gsl_spmatrix_get
   (reported by Manuel Schmitz)

** permit zero-dimension blocks, vectors, matrics, subvectors,
   submatrices, and views of the above (bug #49988)

** added routine gsl_linalg_COD_lssolve2 for regularized
   least squares problems

* What was new in gsl-2.3:

** bug fix in documentation for gsl_linalg_LU_refine
   (bug #49728, Joey De Pauw)

** added gsl_multifit_linear_tsvd and gsl_multifit_wlinear_tsvd
   to give user more control over cutoff for truncated SVD

** added routines for Generalized Cross Validation for
   regularized linear least squares

** improved rstat example program and added documentation for
   gsl_rstat_sd_mean (Jonathan Leto)

** added function gsl_multifit_linear_rank

** bug fix in nonlinear least squares when using data weights with
   finite-difference Jacobian

** add 2D subspace method for large systems (multilarge_nlinear)

** bug fix in gsl_ran_beta for small parameters
   (bug #47646, Yu Liu)

** bug fix in gsl_complex_tan for negative imaginary arguments
   (bug #47347, Yu Liu)

** doc bug fix: value of golden ratio

** fixed scaling issue in 2D subspace nonlinear least squares
   method

** optimize dogleg methods to calculate Gauss-Newton point
   only when needed

* What was new in gsl-2.2.1:

** reverted gsl_linalg_cholesky_decomp to its previous behavior
   so it is backward compatible; new cholesky routine is
   gsl_linalg_cholesky_decomp1

* What was new in gsl-2.2:

** updated gsl_linalg_cholesky_invert to use Level-2 BLAS
   and added function gsl_linalg_pcholesky_invert

** added functions gsl_linalg_tri_*_invert for inverting
   triangular matrices

** fix GSL_EIGEN_SORT_VAL_{ASC,DESC} for nonsymmetric
   eigensystems (Victor Zverovich)

** added complete orthogonal decomposition routines
   (gsl_linalg_COD)
