@@ -169,84 +169,6 @@ gsl_bspline_free (gsl_bspline_workspace * w)
 } /* gsl_bspline_free() */
 
 
-#ifndef GSL_DISABLE_DEPRECATED
-
-/*
-gsl_bspline_deriv_alloc()
-  Allocate space for a bspline derivative workspace. The size of the
-workspace is O(2k^2)
-
-Inputs: k      - spline order (cubic = 4)
-
-Return: pointer to workspace
-*/
-
-gsl_bspline_deriv_workspace *
-gsl_bspline_deriv_alloc (const size_t k)
-{
-  if (k == 0)
-    {
-      GSL_ERROR_NULL ("k must be at least 1", GSL_EINVAL);
-    }
-  else
-    {
-      gsl_bspline_deriv_workspace *dw;
-
-      dw =
-	(gsl_bspline_deriv_workspace *)
-	malloc (sizeof (gsl_bspline_deriv_workspace));
-
-      if (dw == 0)
-	{
-	  GSL_ERROR_NULL ("failed to allocate space for workspace",
-			  GSL_ENOMEM);
-	}
-
-      dw->A = gsl_matrix_alloc (k, k);
-      if (dw->A == 0)
-	{
-	  free (dw);
-	  GSL_ERROR_NULL
-	    ("failed to allocate space for derivative work matrix",
-	     GSL_ENOMEM);
-	}
-
-      dw->dB = gsl_matrix_alloc (k, k + 1);
-      if (dw->dB == 0)
-	{
-	  gsl_matrix_free (dw->A);
-	  free (dw);
-	  GSL_ERROR_NULL
-	    ("failed to allocate space for temporary derivative matrix",
-	     GSL_ENOMEM);
-	}
-
-      dw->k = k;
-
-      return dw;
-    }
-}				/* gsl_bspline_deriv_alloc() */
-
-/*
-gsl_bspline_deriv_free()
-  Free a gsl_bspline_deriv_workspace.
-
-Inputs: dw - workspace to free
-
-Return: none
-*/
-
-void
-gsl_bspline_deriv_free (gsl_bspline_deriv_workspace * dw)
-{
-  RETURN_IF_NULL (dw);
-  gsl_matrix_free (dw->A);
-  gsl_matrix_free (dw->dB);
-  free (dw);
-}				/* gsl_bspline_deriv_free() */
-
-#endif /* !GSL_DISABLE_DEPRECATED */
-
 /* Return number of coefficients */
 size_t
 gsl_bspline_ncoeffs (gsl_bspline_workspace * w)
