@@ -432,9 +432,13 @@ gsl_linalg_hessenberg_submatrix(gsl_matrix *M, gsl_matrix *A, size_t top,
     }
 } /* gsl_linalg_hessenberg_submatrix() */
 
+#ifndef GSL_DISABLE_DEPRECATED
+
 /* To support gsl-1.9 interface: DEPRECATED */
 int
 gsl_linalg_hessenberg(gsl_matrix *A, gsl_vector *tau) 
 {
   return gsl_linalg_hessenberg_decomp(A, tau);
 }
+
+#endif
