@@ -195,6 +195,8 @@ gsl_sf_coupling_3j_e (int two_ja, int two_jb, int two_jc,
   }
 }
 
+#ifndef GSL_DISABLE_DEPRECATED
+
 int
 gsl_sf_coupling_6j_INCORRECT_e(int two_ja, int two_jb, int two_jc,
                                int two_jd, int two_je, int two_jf,
@@ -202,6 +204,8 @@ gsl_sf_coupling_6j_INCORRECT_e(int two_ja, int two_jb, int two_jc,
 {
   return gsl_sf_coupling_6j_e(two_ja, two_jb, two_je, two_jd, two_jc, two_jf, result);
 }
+
+#endif
 
 
 int
@@ -414,6 +418,7 @@ double gsl_sf_coupling_3j(int two_ja, int two_jb, int two_jc,
                                    &result));
 }
 
+#ifndef GSL_DISABLE_DEPRECATED
 
 double gsl_sf_coupling_6j_INCORRECT(int two_ja, int two_jb, int two_jc,
                                     int two_jd, int two_je, int two_jf)
@@ -422,6 +427,8 @@ double gsl_sf_coupling_6j_INCORRECT(int two_ja, int two_jb, int two_jc,
                                              two_jd, two_je, two_jf,
                                              &result));
 }
+
+#endif
 
 
 double gsl_sf_coupling_6j(int two_ja, int two_jb, int two_jc,
